--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -19,31 +19,56 @@
          }
 
     </style>
+
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/css/bootstrap-theme.min.css}" rel="stylesheet">
     <link th:href="@{/css/main.css}" rel="stylesheet">
     <link th:href="@{/styles/signin.css}" rel="stylesheet">
     <script th:src="@{/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
+    <script th:src="@{/js/transition.js}"></script>
+    <script th:src="@{/js/collapse.js}"></script>
+    <script th:src="@{/js/vendor/jquery-1.11.2.min.js}"></script>
 
     <body>
 
     <nav class="navbar navbar-inverse  navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/home_page">Who Is Last?</a>
+                <!-- -->
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#collapsed-buttons" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- -->
+                <a class="navbar-brand" href="/home_page">Who is last?</a>
             </div>
-            <ul class="nav navbar-nav">
-                <li th:if="${logged}" ><a href="/join_the_queue"><span class="glyphicon glyphicon-list"></span> Очереди</a></li>
-                <li th:if="${logged == true and superuser == true}"><a href="/create_queue"><span class="glyphicon glyphicon-list"></span> Создать очередь</a></li>
-                <li th:if="${logged}"><a href="/groupmates"><span class="glyphicon glyphicon-home"></span> Моя группа</a></li>
-                <li th:if="${logged == true and superuser == true}"><a href="/add_user_to_group"><span class="glyphicon glyphicon-plus"></span> Добавить в группу</a></li>
-                <li th:if="${logged == true and superuser == false}"><a href="/new_group"><span class="glyphicon glyphicon-plus"></span> Создать группу</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li th:if="${logged == false}"><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                <li th:if="${logged == false}"><a href="/signin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                <li th:if="${logged}"><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-            </ul>
+            <!-- -->
+            <div class="collapse navbar-collapse" id="collapsed-buttons">
+                <!-- -->
+                <ul class="nav navbar-nav">
+                    <li th:if="${logged}"><a href="/join_the_queue"><span class="glyphicon glyphicon-list"></span>
+                        Очереди</a></li>
+                    <li th:if="${logged == true and superuser == true}"><a href="/create_queue"><span
+                            class="glyphicon glyphicon-list"></span> Создать очередь</a></li>
+                    <li th:if="${logged}"><a href="/groupmates"><span class="glyphicon glyphicon-home"></span> Моя
+                        группа</a></li>
+                    <li th:if="${logged == true and superuser == true}"><a href="/add_user_to_group"><span
+                            class="glyphicon glyphicon-plus"></span> Добавить в группу</a></li>
+                    <li th:if="${logged == true and superuser == false}"><a href="/new_group"><span
+                            class="glyphicon glyphicon-plus"></span> Создать группу</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li th:if="${logged == false}"><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign
+                        Up</a></li>
+                    <li th:if="${logged == false}"><a href="/signin"><span class="glyphicon glyphicon-log-in"></span>
+                        Login</a></li>
+                    <li th:if="${logged}"><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
