Added a logo #WSL-80

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -43,7 +43,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- -->
-                <a class="navbar-brand" href="/home_page">Who is last?</a>
+                <a class="navbar-brand" href="/home_page">
+                    <img height="40px" valign="middle" alt="Who's last?" src="https://psv4.userapi.com/c848120/u20051386/docs/d17/8296a2148db4/modernSpace_4.png?extra=kve_XC2BQf1ReBiYKsLzqt9gPcfTE82yz1IjnrOjfki81DacJ48Rrj8kbhcIGAaGB3GkPNR-v6JlO3uycQ91p1UFyzGMMwG0yAlJm2RcpxnRgZju7EDsdDn-P6Fh5SaCxP9f-KiFcg">
+                </a>
             </div>
             <!-- -->
             <div class="collapse navbar-collapse" id="collapsed-buttons">
