--- a/src/main/resources/templates/groupmates.html
+++ b/src/main/resources/templates/groupmates.html
@@ -18,7 +18,7 @@
         <!--/*@thymesVar id="error" type="aj"*/-->
     </div>
 
-    <table align="center" width="500" border="0" class="table table-striped" th:if="${error} == null">
+    <table align="center" width="500" border="0" class="table table-striped table-responsive" th:if="${error} == null">
         <!--/*@thymesVar id="error" type="aj"*/-->
         <tr>
             <td align="center" class=bg-primary" colspan="3">
