--- a/src/main/resources/templates/home_page.html
+++ b/src/main/resources/templates/home_page.html
@@ -9,7 +9,7 @@
     </div>
 
 
-    <table align="center" width="500" border="1">
+    <table align="center" width="500" border="1" class="table-responsive">
         <tr>
             <td align="center" class=bg-primary">
                 <label><font color="black">Имя:</font></label>
@@ -33,11 +33,11 @@
         <!--/*@thymesVar id="error" type="aj"*/-->
     </div>
 
-    <table align="center">
+    <table align="center" class="table-responsive">
         <tr>
             <td width="400" valign="top">
                 <form  method="post" action="/quit_queue">
-                    <table width="200" border="0" class="table table-striped" style="margin-top: 40px"
+                    <table width="200" border="0" class="table table-striped table-responsive" style="margin-top: 40px"
                            th:if="${partyQueues}">
                         <thead>
                         <tr>
@@ -70,7 +70,7 @@
             </td>
             <td width="400" valign="top">
                 <form method="post" action="/enter_queue">
-                    <table width="200" border="0" class="table table-striped" style="margin-top: 40px"
+                    <table width="200" border="0" class="table table-striped table-responsive" style="margin-top: 40px"
                            th:if="${partyQueues}">
                         <thead class="thread-dark">
                         <tr>
