--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <div class="col-lg-5 col-md-5 col-sm-5" style="margin-top: 30px; margin-left: 50px ">
     <h2 class="danger" th:text="${error}"></h2>
-    <table class="table table-striped ">
+    <table class="table table-striped table-responsive">
         <caption>Users</caption>
         <thead class="thread-dark">
         <tr>
