--- a/src/main/resources/templates/join_the_queue.html
+++ b/src/main/resources/templates/join_the_queue.html
@@ -8,11 +8,11 @@
     <div class="alert  alert-warning" role="alert" th:if="${error} != null" th:text="${error}">
         <!--/*@thymesVar id="error" type="aj"*/-->
     </div>
-    <table align="center">
+    <table align="center" class="table-responsive">
         <tr>
             <td width="400" valign="top">
                 <form  method="post" action="/delete_queue">
-                    <table width="200" border="0" class="table table-striped" style="margin-top: 40px"
+                    <table width="200" border="0" class="table table-striped table-responsive" style="margin-top: 40px"
                            th:if="${partyQueues}">
                         <thead>
                         <tr>
@@ -45,7 +45,7 @@
             </td>
             <td width="400" valign="top">
                 <form method="post" action="/delete_queue">
-                    <table width="200" border="0" class="table table-striped" style="margin-top: 40px"
+                    <table width="200" border="0" class="table table-striped table-responsive" style="margin-top: 40px"
                            th:if="${partyQueues}">
                         <thead class="thread-dark">
                         <tr>
