--- a/src/main/resources/templates/superuser_home.html
+++ b/src/main/resources/templates/superuser_home.html
@@ -4,7 +4,7 @@
 
 <div class="container" style="margin-top: 30px">
 
-    <table align="center" width="500" border="1">
+    <table align="center table-responsive" width="500" border="1">
         <tr>
             <td bgcolor="#6495ed">
                 <label>Имя:</label>
@@ -19,10 +19,10 @@
         </tr>
     </table>
 
-    <table align="center" width="1000" border="1">
+    <table align="center" class="table-responsive" width="1000" border="1">
         <tr >
             <td>
-                <table class="table">
+                <table class="table table-responsive">
                     <thead class="thread-dark">
                     <tr bgcolor="#6495ed">
                         <th scope="col" align="center">#</th>
@@ -39,7 +39,7 @@
                 </table>
             </td>
             <td>
-                <table class="table">
+                <table class="table table-responsive">
                     <thead class="thread-dark">
                     <tr bgcolor="#6495ed">
                         <th scope="col" align="center">Мои очереди</th>
