Improved navbar's collapse #WSL-81

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -25,9 +25,8 @@
     <link th:href="@{/css/main.css}" rel="stylesheet">
     <link th:href="@{/styles/signin.css}" rel="stylesheet">
     <script th:src="@{/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
-    <script th:src="@{/js/transition.js}"></script>
-    <script th:src="@{/js/collapse.js}"></script>
     <script th:src="@{/js/vendor/jquery-1.11.2.min.js}"></script>
+    <script th:src="@{/js/vendor/bootstrap.min.js}"></script>
 
     <body>
 
@@ -43,8 +42,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- -->
-                <a class="navbar-brand" href="/home_page">
-                    <img height="40px" valign="middle" alt="Who's last?" src="https://psv4.userapi.com/c848120/u20051386/docs/d17/8296a2148db4/modernSpace_4.png?extra=kve_XC2BQf1ReBiYKsLzqt9gPcfTE82yz1IjnrOjfki81DacJ48Rrj8kbhcIGAaGB3GkPNR-v6JlO3uycQ91p1UFyzGMMwG0yAlJm2RcpxnRgZju7EDsdDn-P6Fh5SaCxP9f-KiFcg">
+                <a class="navbar-brand" href="/home_page">Who is last?
+                    <!--<img height="40px" valign="middle" alt="Who's last?" src="../static/logo.png">-->
                 </a>
             </div>
             <!-- -->
