--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -8,7 +8,18 @@
         <h2 class="form-signin-heading" align="middle">Зарегистрируйтесь</h2>
         <div class="alert alert-danger" role="alert" th:if="${error != null}" th:text="${error}"></div>
         <label for="inputPassword" class="sr-only">Login</label>
-        <input type="text" id="login" name="inputName" class="form-control" placeholder="введите логин" required>
+        <script>
+        function check(event)
+        {
+            if (event.keyCode==32)
+            {
+                alert('Нельзя вводить пробел');
+                return false;
+            }
+        }
+        </script>
+
+        <input type="text" id="login" name="inputName" class="form-control" onkeypress="return check(event);" placeholder="введите логин" required>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="e-mail адрес" required
                autofocus>
