Added functionality to quit the queue #WSL-69

--- a/src/main/resources/templates/groupmates.html
+++ b/src/main/resources/templates/groupmates.html
@@ -42,7 +42,7 @@
         </tbody>
     </table>
     <div align="center">
-        <form method="" action="">
+        <form method="post" action="/quit_group">
             <button style="margin-top: 50px" id="" type="submit"
                     class="btn btn-lg btn-danger">
                 Покинуть группу
